@@ -339,7 +339,9 @@ instead.</p>
   </tr>
   <tr>
     <td valign="top">additionalparam</td>
-    <td valign="top">Lets you add additional parameters to the javadoc command line. Useful for doclets</td>
+    <td valign="top">Lets you add additional parameters to the javadoc
+            command line. Useful for doclets. Parameters containing
+            spaces need to be quoted using &amp;quot;.</td>
     <td align="center" valign="top">1.2</td>
     <td align="center" valign="top">No</td>
   </tr>
